Refactored package to codingnik20.app.api and removed old codewithnik.app.api